--- a/Spreewaldgurken 1.0/src/Home/index.html
+++ b/Spreewaldgurken 1.0/src/Home/index.html
@@ -6,7 +6,7 @@
         </title>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link href = "/css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
+        <link href = "../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     </head>
     <body>
@@ -19,22 +19,22 @@
 
             <div class="dropdown">
                 <button class="dropbtn"> 
-                    <a href="/src/Packages/SpecialOffer/Shop.html" id="shopee"> 
+                    <a href="../../src/Packages/SpecialOffer/Shop.html" id="shopee"> 
                         Packages 
                     </a>
                     <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
-                    <a href="/src/Packages/SpecialOffer/Shop.html">
+                    <a href="../../src/Packages/SpecialOffer/Shop.html">
                         Special offers
                     </a>
-                    <a href="/src/Packages/Dailytrip/Dailytrip.html">
+                    <a href="../../src/Packages/Dailytrip/Dailytrip.html">
                         Daytrip
                     </a>
-                    <a href="/src/Packages/Holiday/Holiday.html">
+                    <a href="../../src/Packages/Holiday/Holiday.html">
                         Holiday
                     </a>
-                    <a href="/src/Packages/Sport/Sport.html">
+                    <a href="../../src/Packages/Sport/Sport.html">
                         Sport
                     </a>
                 </div>
@@ -44,24 +44,24 @@
                     <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
-                    <a href="/src/AboutRegion/Description.html">
+                    <a href="../../src/AboutRegion/Description.html">
                         Description
                     </a>
-                    <a href="/src/AboutRegion/Foto.html">
+                    <a href="../../src/AboutRegion/Foto.html">
                         Photos
                     </a>
-                    <a href="/src/AboutRegion/video.html">
+                    <a href="../../src/AboutRegion/video.html">
                         Video
                     </a>
-                    <a href="/src/AboutRegion/Wallpaper.html">
+                    <a href="../../src/AboutRegion/Wallpaper.html">
                         Wallpaper
                     </a>
                 </div>
             </div>
-            <a href="/src/AboutUs/AboutUs.html">
+            <a href="../../src/AboutUs/AboutUs.html">
                 About Us
             </a>
-            <a href="/src/ContactUs/Contact.html">
+            <a href="../../src/ContactUs/Contact.html">
                 Contact Us
             </a>
             <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">
@@ -97,7 +97,7 @@
                 <div class="content-wrap">
                     <h3 class="content-title">
                         <a href="index.html">
-                            <img id="logo" src="/img/Imges/logo1.png" alt="SpreewaldGürken-Home"> 
+                            <img id="logo" src="../../img/Imges/logo1.png" alt="SpreewaldGürken-Home"> 
                         </a>
                     </h3>
                     <div class="content-text">
