--- a/Spreewaldgurken 1.0/src/AboutRegion/Foto.html
+++ b/Spreewaldgurken 1.0/src/AboutRegion/Foto.html
@@ -16,28 +16,28 @@
 <!--navagation-->
               <nav class="topnav" id="myTopnav">
 
-                <a href="/src/Home/index.html">
+                <a href="../../src/Home/index.html">
                     Home
                 </a>
 
                 <div class="dropdown">
                 <button class="dropbtn"> 
-                    <a href="/src/Packages/SpecialOffer/Shop.html" id="shopee"> 
+                    <a href="../../src/Packages/SpecialOffer/Shop.html" id="shopee"> 
                         Packages 
                     </a>
                     <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
-                    <a href="/src/Packages/SpecialOffer/Shop.html">
+                    <a href="../../src/Packages/SpecialOffer/Shop.html">
                         Special offers
                     </a>
-                    <a href="/src/Packages/Dailytrip/Dailytrip.html">
+                    <a href="../../src/Packages/Dailytrip/Dailytrip.html">
                         Daytrip
                     </a>
-                    <a href="/src/Packages/Holiday/Holiday.html">
+                    <a href="../../src/Packages/Holiday/Holiday.html">
                         Holiday
                     </a>
-                    <a href="/src/Packages/Sport/Sport.html">
+                    <a href="../../src/Packages/Sport/Sport.html">
                         Sport
                     </a>
                 </div>
@@ -47,24 +47,24 @@
                     <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
-                    <a href="/src/AboutRegion/Description.html">
+                    <a href="../../src/AboutRegion/Description.html">
                         Description
                     </a>
                     <a href="Foto.html">
                         Photos
                     </a>
-                    <a href="/src/AboutRegion/video.html">
+                    <a href="../../src/AboutRegion/video.html">
                         Video
                     </a>
-                    <a href="/src/AboutRegion/Wallpaper.html">
+                    <a href="../../src/AboutRegion/Wallpaper.html">
                         Wallpaper
                     </a>
                 </div>
             </div>
-                <a href="/src/AboutUs/AboutUs.html">
+                <a href="../../src/AboutUs/AboutUs.html">
                 About Us
             </a>
-                <a href="/src/ContactUs/Contact.html">
+                <a href="../../src/ContactUs/Contact.html">
                 Contact Us
             </a>
                 <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">
@@ -79,15 +79,15 @@
             <header class="slider">
             <figure>
                 <div class="slide">
-                    <img src="/img/images/spreeee.jpg" alt="" >
+                    <img src="../../img/images/spreeee.jpg" alt="" >
                 </div>
 
                 <div class="slide">
-                    <img src="/img/images/2.jpg" alt="" >
+                    <img src="../../img/images/2.jpg" alt="" >
                 </div>
 
                 <div class="slide">
-                    <img src="/img/images/3.jpg" alt="" >
+                    <img src="../../img/images/3.jpg" alt="" >
                 </div>
             </figure>
         </header>
