--- a/Spreewaldgurken 1.0/src/Home/index.html
+++ b/Spreewaldgurken 1.0/src/Home/index.html
@@ -197,7 +197,7 @@
 
 <!-- Footer -->
         <footer id="main-footer" class="foot-grid">
-            <a class="nav-links" href="/src/Shop/Home/Shop.html">
+            <a class="nav-links" href="../Packages/SpecialOffer/">
                 Packages
             </a>
             <a class="nav-links" href="#">
