--- a/Spreewaldgurken 1.0/src/Packages/Sport/Sport.html
+++ b/Spreewaldgurken 1.0/src/Packages/Sport/Sport.html
@@ -111,7 +111,7 @@
 
 <!-- Footer -->
         <footer id="main-footer" class="foot-grid">
-            <a class="nav-links" href="/src/Shop/Home/Shop.html">
+            <a class="nav-links" href="../SpecialOffer/Shop.html">
                 Packages
             </a>
             <a class="nav-links" href="#">
