--- a/Spreewaldgurken 1.0/src/AboutRegion/Description.html
+++ b/Spreewaldgurken 1.0/src/AboutRegion/Description.html
@@ -113,7 +113,7 @@
             </section>
 <!-- Footer -->
         <footer id="main-footer" class="foot-grid">
-            <a class="nav-links" href="/src/Shop/Home/Shop.html">
+            <a class="nav-links" href="../Packages/SpecialOffer/Shop.html">
                 Packages
             </a>
             <a class="nav-links" href="#">
