--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Sport/Sport.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Sport/Sport.html
@@ -68,11 +68,20 @@
 </main>
 
 <!-- Footer -->
-<footer id="main-footer" class="grid">
-    <a href="#"  id="sozial1" class="fa fa-facebook"></a>
-    <a href="#" id="sozial2" class="fa fa-twitter"></a>
-    <a href="#" id="sozial3" class="fa fa-google"></a>
-    <a href="#"  id="sozial4" class="fa fa-youtube"></a>
+<footer id="main-footer" class="grid-grid">
+
+    <link rel="stylesheet" href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?rd5re8">
+    <ul class="socicons-list">
+        <li>
+            <a href='#' target='_blank'><span class="socicon-facebook"></span></a>
+        </li>
+        <li>
+            <a href="../../Shop/Home/Shop.html" > Packages </a>
+        </li>
+        <li>
+            <a href='#' target='_blank'><span class="socicon-instagram"></span></a>
+        </li>
+    </ul>
 </footer>
 
 </body>
