the last changes

--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Sport/Sport.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Sport/Sport.html
@@ -62,7 +62,7 @@
 
         <div class="box">
             <h2 class="content-title">About Our services</h2>
-            <p>Are you on holiday in the Spreewald for the first time? Or do need information about holiday activities in the Spreewald? The tips below will help you plan your trip to the Spreewald better. We assure you of an experience that is affordable, your monies worth, and above all, worth your recreational time.</p>
+            <p>Are you on holiday in the Spreewald for the first time? Or do nee1d information about holiday activities in the Spreewald? The tips below will help you plan your trip to the Spreewald better. We assure you of an experience that is affordable, your monies worth, and above all, worth your recreational time.</p>
         </div>
     </section>
 </main>
