--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Description/Description.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Description/Description.html
@@ -15,9 +15,9 @@
     <a href="../../Home/index.html" class="active">Home</a>
 
     <div class="dropdown">
-        <button class="dropbtn"> <a href="../../Shop/Home/Shop.html" id="shopee"> Packages </a>
+        <div class="dropbtn"> <a href="../../Shop/Home/Shop.html" id="shopee"> Packages </a>
             <i class="fa fa-caret-down"></i>
-        </button>
+        </div>
         <div class="dropdown-content">
             <a href="../../Shop/Special%20offers/SpecialOffers.html">Special offers</a>
             <a href="../../Shop/Dailytrip/Dailytrip.html">Daytrip</a>
@@ -26,15 +26,13 @@
         </div>
     </div>
     <div class="dropdown">
-        <button class="dropbtn"> About the region
+        <div class="dropbtn"> <a href="#" > About the region </a>
             <i class="fa fa-caret-down"></i>
-        </button>
+        </div>
         <div class="dropdown-content">
+            <a href="Description.html"> Description </a>
             <a href="../Foto/Foto.html">fotos</a>
             <a href="../Video/video.html">video</a>
-            <a href="Description.html">
-                Description
-            </a>
             <a href="../wallpaper/wallpaper.html">wallpaper</a>
         </div>
     </div>
@@ -46,6 +44,7 @@
 
 
 <!-- Section C -->
+<main id="main">
 <section id="section-c" class="grid">
     <div class="content-wrap">
         <h2 class="content-title">
@@ -61,11 +60,12 @@
         </p>
     </div>
 </section>
+</main>
 
 
 
 <!-- Section D -->
-<div id="main">
+<div>
     <section id="section-d" class="grid">
         <div class="box">
             <h2 class="content-title">Contact Us</h2>
@@ -98,7 +98,6 @@
         </li>
     </ul>
 </footer>
-
 
 
 
