--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Dailytrip/Dailytrip.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Dailytrip/Dailytrip.html
@@ -14,9 +14,9 @@
 <nav class="topnav" id="myTopnav">
     <a href="../../Home/index.html" class="active">Home</a>
     <div class="dropdown">
-        <button class="dropbtn"> <a href="../Home/Shop.html" id="shopee"> Packages </a>
+        <div class="dropbtn"> <a href="../Home/Shop.html" id="shopee"> Packages </a>
             <i class="fa fa-caret-down"></i>
-        </button>
+        </div>
         <div class="dropdown-content">
             <a href="../Special%20offers/SpecialOffers.html">Special offers</a>
             <a href="../Dailytrip/Dailytrip.html">Daytrip</a>
@@ -25,9 +25,9 @@
         </div>
     </div>
     <div class="dropdown">
-        <button class="dropbtn"> About the region
+        <div class="dropbtn"> <a href="#" > About the region </a>
             <i class="fa fa-caret-down"></i>
-        </button>
+        </div>
         <div class="dropdown-content">
             <a href="../../About%20the%20region/Description/Description.html">Description </a>
             <a href="../../About%20the%20region/Foto/Foto.html">fotos</a>
@@ -41,30 +41,24 @@
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()">&#9776;</a>
 </nav>
 
-
-
-
+<header>
+</div>
+<div class="content-wrap">
+    <h2 class="content-title"> We offer the best prices and the best performance for you</h2>
+</div>
+</header>
 
 
 <!-- Section C -->
 
-
-<main id="Triptable" >
+<main id="main">
+<div id="Triptable" >
     <div>  <table id="demo"></table></div>
-
-</main>
-    <div class="content-wrap">
-        <h2 class="content-title"> We offer the best prices and the best performance for you</h2>
-
-       </div>
-
-
-
 
 
 
 <!-- Section B -->
-<section id="main">
+<section >
     <section id="section-d" class="grid">
         <div class="box">
             <h2 class="content-title">Contact Us</h2>
@@ -79,6 +73,8 @@
         </div>
     </section>
 </section>
+
+</main>
 
 <!-- Footer -->
 
