--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Home/Shop.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Home/Shop.html
@@ -14,9 +14,9 @@
 <nav class="topnav" id="myTopnav">
     <a href="../../Home/index.html" class="active">Home</a>
     <div class="dropdown">
-        <button class="dropbtn"> <a href="../Home/Shop.html" id="shopee"> Packages </a>
+        <div class="dropbtn"> <a href="../Home/Shop.html" id="shopee"> Packages </a>
             <i class="fa fa-caret-down"></i>
-        </button>
+        </div>
         <div class="dropdown-content">
             <a href="../Special%20offers/SpecialOffers.html">Special offers</a>
             <a href="../Dailytrip/Dailytrip.html">Daytrip</a>
@@ -25,9 +25,9 @@
         </div>
     </div>
     <div class="dropdown">
-        <button class="dropbtn"> About the region
+        <div class="dropbtn"> <a href="#" > About the region </a>
             <i class="fa fa-caret-down"></i>
-        </button>
+        </div>
         <div class="dropdown-content">
             <a href="../../About%20the%20region/Description/Description.html">Description </a>
             <a href="../../About%20the%20region/Foto/Foto.html">fotos</a>
@@ -45,32 +45,32 @@
 
 
 <!-- Section A -->
-<div class="Wrapper1">
+<main class="Wrapper1" id="main" >
     <div class="boxe boxe1" >
         <div> promotion und Special offers </div>
-        <div> <a href="../Special%20offers/SpecialOffers.html" class="linken" >  <img src="../../../img/Neuer%20Ordner/cucumber.svg" alt=""  class="cucumber" height="100px" width="100px"> </a> </div>
+        <div> <a href="../Special%20offers/SpecialOffers.html" class="linken" >  <img src="../../../img/Neuer%20Ordner/cucumber.svg" alt=""  class="cucumber" > </a> </div>
     </div>
     <div class="boxe boxe2" >
         <div> Daytrip </div>
-        <div> <a href="../Dailytrip/Dailytrip.html" class="linken" > <img src="../../../img/Neuer%20Ordner/cucumber-2.svg" alt=""  class="cucumber" height="100px" width="100px">
+        <div> <a href="../Dailytrip/Dailytrip.html" class="linken" > <img src="../../../img/Neuer%20Ordner/cucumber-2.svg" alt=""  class="cucumber" >
         </a> </div>
     </div>
     <div class="boxe boxe3" >
         <div>Hollydays </div>
         <div>
-            <a href="../Hollydays/Hollydays.html" class="linken" > <img src="../../../img/Neuer%20Ordner/cucumber-5.svg" alt=""  class="cucumber" height="100px" width="100px"> </a>
+            <a href="../Hollydays/Hollydays.html" class="linken" > <img src="../../../img/Neuer%20Ordner/cucumber-5.svg" alt=""  class="cucumber" > </a>
         </div>
     </div>
     <div class="boxe boxe4">
         <div> Sport </div>
         <div>
-            <a href="../Sport/Sport.html" class="linken" >  <img src="../../../img/Neuer%20Ordner/cucumber-4.svg" alt=""  class="cucumber" height="100px" width="100px"> </a>
+            <a href="../Sport/Sport.html" class="linken" >  <img src="../../../img/Neuer%20Ordner/cucumber-4.svg" alt=""  class="cucumber" > </a>
         </div>
     </div>
-</div>
+</main>
 
 <!-- Section B -->
-<main id="main">
+<div >
     <section id="section-d" class="grid">
         <div class="box">
             <h2 class="content-title">Contact Us</h2>
@@ -84,7 +84,7 @@
             <p>Are you on holiday in the Spreewald for the first time? Or do need information about holiday activities in the Spreewald? The tips below will help you plan your trip to the Spreewald better. We assure you of an experience that is affordable, your monies worth, and above all, worth your recreational time.</p>
         </div>
     </section>
-</main>
+</div>
 
 <!-- Footer -->
 <footer id="main-footer" class="grid-grid">
