--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Special offers/SpecialOffers.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Special offers/SpecialOffers.html
@@ -13,9 +13,9 @@
 <nav class="topnav" id="myTopnav">
     <a href="../../Home/index.html" class="active">Home</a>
     <div class="dropdown">
-        <button class="dropbtn"> <a href="../Home/Shop.html" id="shopee"> Packages </a>
+        <div class="dropbtn"> <a href="../Home/Shop.html" id="shopee"> Packages </a>
             <i class="fa fa-caret-down"></i>
-        </button>
+        </div>
         <div class="dropdown-content">
             <a href="SpecialOffers.html">Special offers</a>
             <a href="../Dailytrip/Dailytrip.html">Daytrip</a>
@@ -24,9 +24,9 @@
         </div>
     </div>
     <div class="dropdown">
-        <button class="dropbtn"> About the region
+        <div class="dropbtn"> <a href="#" > About the region </a>
             <i class="fa fa-caret-down"></i>
-        </button>
+        </div>
         <div class="dropdown-content">
             <a href="../../About%20the%20region/Description/Description.html">Description </a>
             <a href="../../About%20the%20region/Foto/Foto.html">fotos</a>
