--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Sport/Sport.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Sport/Sport.html
@@ -13,9 +13,9 @@
 <nav class="topnav" id="myTopnav">
     <a href="../../Home/index.html" class="active">Home</a>
     <div class="dropdown">
-        <button class="dropbtn"> <a href="../Home/Shop.html" id="shopee"> Packages </a>
+        <div class="dropbtn"> <a href="../Home/Shop.html" id="shopee"> Packages </a>
             <i class="fa fa-caret-down"></i>
-        </button>
+        </div>
         <div class="dropdown-content">
             <a href="../Special%20offers/SpecialOffers.html">Special offers</a>
             <a href="../Dailytrip/Dailytrip.html">Daytrip</a>
@@ -24,9 +24,9 @@
         </div>
     </div>
     <div class="dropdown">
-        <button class="dropbtn"> About the region
+        <div class="dropbtn"> <a href="#" > About the region </a>
             <i class="fa fa-caret-down"></i>
-        </button>
+        </div>
         <div class="dropdown-content">
             <a href="../../About%20the%20region/Description/Description.html">Description </a>
             <a href="../../About%20the%20region/Foto/Foto.html">fotos</a>
@@ -41,6 +41,17 @@
 </nav>
 
 
+
+<header>
+    <div class="content-wrap">
+        <h2 class="content-title"> We offer the best prices and the best performance for you </h2>
+
+    </div>
+
+</header>
+
+
+<main id="main">
 <!-- Section A -->
 
 <div id='show'></div><br>
@@ -51,7 +62,7 @@
 
 
 <!-- Section B -->
-<main id="main">
+<div >
     <section id="section-d" class="grid">
         <div class="box">
             <h2 class="content-title">Contact Us</h2>
@@ -65,6 +76,8 @@
             <p>Are you on holiday in the Spreewald for the first time? Or do nee1d information about holiday activities in the Spreewald? The tips below will help you plan your trip to the Spreewald better. We assure you of an experience that is affordable, your monies worth, and above all, worth your recreational time.</p>
         </div>
     </section>
+</div>
+
 </main>
 
 <!-- Footer -->
