--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Foto/Foto.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Foto/Foto.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>SpreewaldgurckenGalrie</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
     <link href = "../../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <script src="../../../js/Script.js"></script>
@@ -15,11 +14,10 @@
 <!--navagation-->
 <nav class="topnav" id="myTopnav">
     <a href="../../Home/index.html" class="active">Home</a>
-
     <div class="dropdown">
-        <button class="dropbtn"> <a href="../../Shop/Home/Shop.html" id="shopee"> Packages </a>
+        <div class="dropbtn"> <a href="../../Shop/Home/Shop.html" id="shopee"> Packages </a>
             <i class="fa fa-caret-down"></i>
-        </button>
+        </div>
         <div class="dropdown-content">
             <a href="../../Shop/Special%20offers/SpecialOffers.html">Special offers</a>
             <a href="../../Shop/Dailytrip/Dailytrip.html">Daytrip</a>
@@ -28,9 +26,9 @@
         </div>
     </div>
     <div class="dropdown">
-        <button class="dropbtn"> About the region
+        <div class="dropbtn"> <a href="#" > About the region </a>
             <i class="fa fa-caret-down"></i>
-        </button>
+        </div>
         <div class="dropdown-content">
             <a href="../Description/Description.html">Description </a>
             <a href="#">fotos</a>
