--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/wallpaper/wallpaper.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/wallpaper/wallpaper.html
@@ -15,9 +15,9 @@
     <a href="../../Home/index.html" class="active">Home</a>
 
     <div class="dropdown">
-        <button class="dropbtn"> <a href="../../Shop/Home/Shop.html" id="shopee"> Packages </a>
+        <div class="dropbtn"> <a href="../../Shop/Home/Shop.html" id="shopee"> Packages </a>
             <i class="fa fa-caret-down"></i>
-        </button>
+        </div>
         <div class="dropdown-content">
             <a href="../../Shop/Special%20offers/SpecialOffers.html">Special offers</a>
             <a href="../../Shop/Dailytrip/Dailytrip.html">Daytrip</a>
@@ -26,9 +26,9 @@
         </div>
     </div>
     <div class="dropdown">
-        <button class="dropbtn"> About the region
+        <div class="dropbtn"> <a href="#" > About the region </a>
             <i class="fa fa-caret-down"></i>
-        </button>
+        </div>
         <div class="dropdown-content">
             <a href="../../About%20the%20region/Description/Description.html">Description </a>
             <a href="../../About%20the%20region/Foto/Foto.html">fotos</a>
