--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Contact us /Contact.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Contact us /Contact.html
@@ -7,7 +7,7 @@
     <link href = "../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
    <!-- <script src="../../js/Script.js"></script> -->
-    <script src="Script.js"></script>
+    <script src="../../js/Script2.js"></script>
 </head>
 <body onload="displayINFO()">
 
@@ -16,9 +16,9 @@
     <a href="../Home/index.html" class="active">Home</a>
 
     <div class="dropdown">
-        <button class="dropbtn"> <a href="../Shop/Home/Shop.html" id="shopee"> Packages </a>
+        <div class="dropbtn"> <a href="../Shop/Home/Shop.html" id="shopee"> Packages </a>
             <i class="fa fa-caret-down"></i>
-        </button>
+        </div>
         <div class="dropdown-content">
             <a href="../Shop/Special%20offers/SpecialOffers.html">Special offers</a>
             <a href="../Shop/Dailytrip/Dailytrip.html">Daytrip</a>
@@ -27,9 +27,9 @@
         </div>
     </div>
     <div class="dropdown">
-        <button class="dropbtn"> About the region
+        <div class="dropbtn"> <a href="#" > About the region </a>
             <i class="fa fa-caret-down"></i>
-        </button>
+        </div>
         <div class="dropdown-content">
             <a href="../About%20the%20region/Description/Description.html">Description </a>
             <a href="../About%20the%20region/Foto/Foto.html">fotos</a>
