--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Hollydays/Hollydays.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Hollydays/Hollydays.html
@@ -16,9 +16,9 @@
 <nav class="topnav" id="myTopnav">
     <a href="../../Home/index.html" class="active">Home</a>
     <div class="dropdown">
-        <button class="dropbtn"> <a href="../Home/Shop.html" id="shopee"> Packages </a>
+        <div class="dropbtn"> <a href="../Home/Shop.html" id="shopee"> Packages </a>
             <i class="fa fa-caret-down"></i>
-        </button>
+        </div>
         <div class="dropdown-content">
             <a href="../Special%20offers/SpecialOffers.html">Special offers</a>
             <a href="../Dailytrip/Dailytrip.html">Daytrip</a>
@@ -27,9 +27,9 @@
         </div>
     </div>
     <div class="dropdown">
-        <button class="dropbtn"> About the region
+        <div class="dropbtn"> <a href="#" > About the region </a>
             <i class="fa fa-caret-down"></i>
-        </button>
+        </div>
         <div class="dropdown-content">
             <a href="../../About%20the%20region/Description/Description.html">Description </a>
             <a href="../../About%20the%20region/Foto/Foto.html">fotos</a>
@@ -46,24 +46,23 @@
 
 
 
-
-
-
-
-<!-- Section B -->
-
-
-<main id="Triptable" >
-    <div>  <table id="holiday"></table></div>
-
-</main>
+<header>
 <div class="content-wrap">
     <h2 class="content-title"> We offer the best prices and the best performance for you </h2>
 
-   </div>
+</div>
 
+</header>
 
-<div id="main">
+<!-- Section B -->
+<main id="main">
+
+<div id="Triptable" >
+    <div>  <table id="holiday"></table></div>
+
+</div>
+
+<div>
     <section id="section-d" class="grid">
         <div class="box">
             <h2 class="content-title">Contact Us</h2>
@@ -78,7 +77,7 @@
         </div>
     </section>
 </div>
-
+</main>
 <!-- Footer -->
 <footer id="main-footer" class="grid-grid">
 
