--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Foto/Foto.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Foto/Foto.html
@@ -45,38 +45,50 @@
 
 
 <!-- Section A -->
-<header  class="galarie">
-<div class="row">
-    <div class="column">
-        <img src="../../../img/images/12.jpg" style="width:100%" alt="">
-        <img src="../../../img/images/1.jpg" style="width:100%" alt="">
-        <img src="../../../img/images/13.jpg" style="width:100%" alt="">
 
+<header>
 
-    </div>
-    <div class="column">
-        <img src="../../../img/images/14.jpg" style="width:100%" alt="">
-        <img src="../../../img/images/2.jpg" style="width:100%" alt="">
-        <img src="../../../img/images/3.jpg" style="width:100%" alt="">
+    <ul class="breadcrumb">
+        <li><a href="../../Home/index.html">Home</a></li>
+        <li>fotos</li>
+    </ul>
 
-    </div>
-    <div class="column">
-        <img src="../../../img/images/4.jpeg" style="width:100%" alt="">
-        <img src="../../../img/images/15.jpg" style="width:100%" alt="">
-        <img src="../../../img/images/5.jpg" style="width:100%" alt="">
-    </div>
-    <div class="column">
-        <img src="../../../img/images/33.png" style="width:100%" alt="">
-        <img src="../../../img/images/6.jpg" style="width:100%" alt="">
-        <img src="../../../img/images/7.jpg" style="width:100%" alt="">
-
-    </div>
-</div>
 </header>
+
 
 
 <!-- Section B -->
 <main id="main">
+
+
+    <div  class="galarie">
+        <div class="row">
+            <div class="column">
+                <img src="../../../img/images/12.jpg" style="width:100%" alt="">
+                <img src="../../../img/images/1.jpg" style="width:100%" alt="">
+                <img src="../../../img/images/13.jpg" style="width:100%" alt="">
+
+
+            </div>
+            <div class="column">
+                <img src="../../../img/images/14.jpg" style="width:100%" alt="">
+                <img src="../../../img/images/2.jpg" style="width:100%" alt="">
+                <img src="../../../img/images/3.jpg" style="width:100%" alt="">
+
+            </div>
+            <div class="column">
+                <img src="../../../img/images/4.jpeg" style="width:100%" alt="">
+                <img src="../../../img/images/15.jpg" style="width:100%" alt="">
+                <img src="../../../img/images/5.jpg" style="width:100%" alt="">
+            </div>
+            <div class="column">
+                <img src="../../../img/images/33.png" style="width:100%" alt="">
+                <img src="../../../img/images/6.jpg" style="width:100%" alt="">
+                <img src="../../../img/images/7.jpg" style="width:100%" alt="">
+
+            </div>
+        </div>
+    </div>
     <section id="section-d" class="grid">
         <div class="box">
             <h2 class="content-title">Contact Us</h2>
