--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/AboutUs/AboutUs.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/AboutUs/AboutUs.html
@@ -44,9 +44,13 @@
 
 
 <!-- Section A -->
+<header>
+<ul class="breadcrumb">
+    <li><a href="../Home/index.html">Home</a></li>
+    <li>About us</li>
+</ul>
 
-
-<header class="slider">
+<div class="slider">
     <figure>
         <div class="slide">
             <img src="../../img/image/ast-baume-boot-772429.jpg" alt="" >
@@ -68,8 +72,8 @@
             <img src="../../img/image/ast-baume-boot-772429.jpg" alt="" >
         </div>
     </figure>
+</div>
 </header>
-
 <!-- Section B -->
 <main id="section-c" class="grid">
     <div class="content-wrap">
