--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Home/index.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Home/index.html
@@ -39,9 +39,8 @@
     <a href="../AboutUs/AboutUs.html">About us</a>
     <a href="../Contact%20us%20/Contact.html">Contact us</a>
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()">&#9776;</a>
+
 </nav>
-
-
 
 <!-- hier sind wir mit der Nivagation fertig! -->
 
@@ -55,10 +54,19 @@
         </p>
         <a href="#section-b" class="btn">Read More</a>
     </div>
+
+
+
+
+
+
 </header>
 
 <!-- Main Area -->
 <main id="main">
+
+    <!-- Section  breadcrumb -->
+
     <!-- Section A -->
     <section id="section-a" class="grid">
         <div class="content-wrap">
