--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Dailytrip/Dailytrip.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Dailytrip/Dailytrip.html
@@ -41,7 +41,16 @@
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()">&#9776;</a>
 </nav>
 
+
+
 <header>
+
+    <ul class="breadcrumb">
+        <li><a href="../../Home/index.html">Home</a></li>
+        <li><a href="../Home/Shop.html">Packages</a></li>
+        <li>Daytrip</li>
+    </ul>
+
 </div>
 <div class="content-wrap">
     <h2 class="content-title"> We offer the best prices and the best performance for you</h2>
