--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Home/Shop.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Home/Shop.html
@@ -43,6 +43,16 @@
 
 
 
+<header>
+
+    <ul class="breadcrumb">
+        <li><a href="../../Home/index.html">Home</a></li>
+        <li>Packages</li>
+    </ul>
+</header>
+
+
+
 
 <!-- Section A -->
 <main class="Wrapper1" id="main" >
