--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Special offers/SpecialOffers.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Special offers/SpecialOffers.html
@@ -40,19 +40,27 @@
     <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()">&#9776;</a>
 </nav>
 <!-- Section A -->
-<header id="showcase2" class="grid">
+<header>
 
-    <div class="bg-image"> </div>
-    <div class="content-wrap">
-        <h1>Welcome to our Special offers </h1>
-        <p>You get 10 percent on all products, our products are organic and very healthy, the nature of spreewald is wonderful and very beautiful. with and you can relax. just go on hollidys and get 10 percent off everything and it's done automatically discover our Hollidays now. Plus get pumpkin soup for free
-        </p>
-        <a href="../Hollydays/Hollydays.html" class="btn">Read More</a>
-    </div>
+    <ul class="breadcrumb">
+        <li><a href="../../Home/index.html">Home</a></li>
+        <li><a href="../Home/Shop.html">Packages</a></li>
+        <li>Special offers</li>
+    </ul>
 </header>
 
 <main>
 
+    <div id="showcase2" class="grid">
+
+        <div class="bg-image"> </div>
+        <div class="content-wrap">
+            <h1>Welcome to our Special offers </h1>
+            <p>You get 10 percent on all products, our products are organic and very healthy, the nature of spreewald is wonderful and very beautiful. with and you can relax. just go on hollidys and get 10 percent off everything and it's done automatically discover our Hollidays now. Plus get pumpkin soup for free
+            </p>
+            <a href="../Hollydays/Hollydays.html" class="btn">Read More</a>
+        </div>
+    </div>
 
 <section id="section-c" class="grid">
     <div class="content-wrap">
