--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/wallpaper/wallpaper.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/wallpaper/wallpaper.html
@@ -44,9 +44,13 @@
 
 
 <!-- Section A -->
+<header>
+    <ul class="breadcrumb">
+        <li><a href="../../Home/index.html">Home</a></li>
+        <li>wallpaper</li>
+    </ul>
 
-
-<header class="slider">
+<div class="slider">
     <figure>
         <div class="slide">
             <img src="../../../img/image/ast-baume-boot-772429.jpg" alt="" >
@@ -68,6 +72,8 @@
             <img src="../../../img/image/ast-baume-boot-772429.jpg" alt="" >
         </div>
     </figure>
+</div>
+
 </header>
 
 <!-- Section B -->
