--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Contact us /Contact.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Contact us /Contact.html
@@ -45,10 +45,15 @@
 
 
 <!-- Section A -->
+<header>
+    <ul class="breadcrumb">
+        <li><a href="../Home/index.html">Home</a></li>
+        <li>Contact us</li>
+    </ul>
 
 <h3>Contact Form</h3>
 
-<header class="container">
+<div class="container">
     <form action="#">
         <label for="fname">First Name</label>
         <input type="text" id="fname" name="firstname" placeholder="Your name..">
@@ -60,8 +65,8 @@
 
         <input type="submit" value="Submit">
     </form>
+</div>
 </header>
-
 <!-- Section B -->
 
 
