validation with https://validator.nu

--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Dailytrip/Dailytrip.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Dailytrip/Dailytrip.html
@@ -44,7 +44,7 @@
 
 
 <header>
-
+<div>
     <ul class="breadcrumb">
         <li><a href="../../Home/index.html">Home</a></li>
         <li><a href="../Home/Shop.html">Packages</a></li>
@@ -52,6 +52,7 @@
     </ul>
 
 </div>
+
 <div class="content-wrap">
     <h2 class="content-title"> We offer the best prices and the best performance for you</h2>
 </div>
@@ -63,12 +64,13 @@
 <main id="main">
 <div id="Triptable" >
     <div>  <table id="demo"></table></div>
+    </div>
 
 
 
 <!-- Section B -->
 <section >
-    <section id="section-d" class="grid">
+    <div id="section-d" class="grid">
         <div class="box">
             <h2 class="content-title">Contact Us</h2>
             <p>preeWaldGürcken GmbH<br>Karl-liebkenchtStr 102<br>Germany<br>03046 Cottbus<br>
@@ -80,7 +82,7 @@
             <h2 class="content-title">About Our services</h2>
             <p>Are you on holiday in the Spreewald for the first time? Or do need information about holiday activities in the Spreewald? The tips below will help you plan your trip to the Spreewald better. We assure you of an experience that is affordable, your monies worth, and above all, worth your recreational time.</p>
         </div>
-    </section>
+    </div>
 </section>
 
 </main>
