--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Foto/Foto.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Foto/Foto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>SpreewaldgurckenGalrie</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href = "../../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <script src="../../../js/Script.js"></script>
