title in English

--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Description/Description.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Description/Description.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>SpreewaldgurckenGalrie</title>
+    <title>About Spreewald Region</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href = "../../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <script src="../../../js/Script.js"></script>
 </head>
 <body>
 
@@ -60,10 +59,10 @@
             Spreewald
         </h2>
         <p>
-            The Spreewald is an extensive lowland area and a historic cultural landscape in the southeast of the state of Brandenburg . The main feature is the natural river branch of the Spree , which has been significantly expanded by established channels. As an alluvial and moor landscape , it is of national importance for nature conservation and is protected as a biosphere reserve (see Spreewald Biosphere Reserve ). The Spreewald as a cultural landscape was crucial by the Sorbsembossed. The area is one of the most famous and popular destinations in the state of Brandenburg.
+            The Spreewald is an extensive lowland area and a historic cultural landscape in the southeast of the state of Brandenburg . The main feature is the natural river branch of the Spree , which has been significantly expanded by established channels. As an alluvial and moor landscape, it is of national importance for nature conservation and is protected as a biosphere reserve. The Spreewald as a cultural landscape was the center of the Battle of Halbe at the end of World War II, which included the last major land conflicts between German and Soviet forces. The area is one of the most famous and popular destinations in the state of Brandenburg.
         </p>
         <p>
-            <a href="https://de.wikipedia.org/wiki/Spreewald">
+            <a href="https://en.wikipedia.org/wiki/Spreewald">
                 Read more on wiki
             </a>
         </p>
@@ -108,7 +107,7 @@
     </ul>
 </footer>
 
-
+<script src="../../../js/Script.js"></script>
 
 </body>
 </html>
