--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Contact us /Contact.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Contact us /Contact.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>SpreewaldgurckenGalrie</title>
+    <title>Spreewaldgurcken Contact</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href = "../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-   <!-- <script src="../../js/Script.js"></script> -->
-    <script src="../../js/Script2.js"></script>
 </head>
 <body onload="displayINFO()">
 
@@ -113,6 +111,6 @@
         </li>
     </ul>
 </footer>
-
+<script src="../../js/Script2.js"></script>
 </body>
 </html>
