--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Hollydays/Hollydays.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Hollydays/Hollydays.html
@@ -2,12 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
 
-    <title>SpreewaldgurckenGalrie</title>
+    <title>SpreewaldGürken Holiday</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href = "../../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <script src="../../../js/Script.js"></script>
 
 </head>
 <body onload="displayHoliday()">
@@ -102,5 +101,6 @@
         </li>
     </ul>
 </footer>
+<script src="../../../js/Script.js"></script>
 </body>
 </html>
