--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Sport/Sport.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Sport/Sport.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>SpreewaldgurckenGalrie</title>
+    <title>Spreewald Sport</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href = "../../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <script src="../../../js/Script.js"></script>
+
 </head>
 <body onload="displaySport()">
 
@@ -101,6 +101,6 @@
         </li>
     </ul>
 </footer>
-
+<script src="../../../js/Script.js"></script>
 </body>
 </html>
