add Contact java Script

--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Contact us /Contact.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Contact us /Contact.html
@@ -7,14 +7,14 @@
     <link href = "../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 </head>
-<body onload="displayINFO()">
+<body onload="displayinfo()">
 
 <!--navagation-->
 <nav class="topnav" id="myTopnav">
     <a href="../Home/index.html" class="active">Home</a>
 
     <div class="dropdown">
-        <div class="dropbtn"> <a href="../Shop/Home/Shop.html" id="shopee"> Packages </a>
+        <div class="dropbtn"> <a href="../Shop/Home/Shop.html"> Packages </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
