--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Video/video.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Video/video.html
@@ -59,7 +59,7 @@
 <!-- Section B -->
 <main id="main">
     <div class="videoWrapper">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/qur0DjGMn5c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/qur0DjGMn5c"  allowfullscreen></iframe>
     </div>
     <section id="section-d" class="grid">
         <div class="box">
